--- a/api/build.gradle
+++ b/api/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+    compileOnly("org.springframework.boot:spring-boot-devtools")
     implementation 'org.modelmapper:modelmapper:3.2.0'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
