--- a/node/package.json
+++ b/node/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "swagger-jsdoc": "^6.2.8",
