--- a/node/package.json
+++ b/node/package.json
@@ -10,10 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "axios": "^1.9.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
+    "pg": "^8.16.0",
+    "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.9.0"
   }
 }
